align class tag message_log to chat_log. modifying css to allow word wrap to avoid overflow
class标签从message_log到chat_log。
css添加规则防止文本太长时不会换行。

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -650,3 +650,10 @@ td {
     background-color: black;
     border: 2px solid gainsboro;
 }
+.chat_log{
+    width: 100% ;
+    display: flex;
+    flex-flow: column;
+    word-wrap:normal;
+    word-break:keep-all
+}
